--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ body {
   
 }
 
+
+
 h1{
   color: #F86868;
 }
@@ -27,7 +29,10 @@ h1{
 img{
   border-radius: 10px;
 }
-
+.formacionYboton span {
+  font-size: larger;
+  color: white;
+}
 
 .container {
   max-width: 1100px;
@@ -38,7 +43,9 @@ img{
 }
 
 
-
+.contenedorFormacion h1{
+  color: white;
+}
 
 a {
   color: white;
@@ -234,6 +241,7 @@ margin-right: 18px;
   .contenedorGrandeBootcamp {
     padding-top: 75px;
     justify-content: center;
+    background-color: beige;
     
 /*     display: flex; ESTO ME QUITA EL SCROLL DE HORIZONTAL
  */    flex-direction: column;
@@ -285,6 +293,7 @@ margin-right: 18px;
     margin-left: 20px;
     margin-right: 20px;
     margin: 10px;
+    border-radius: 5px;
 
   }
   
