--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,11 @@ margin-right: 18px;
   font-weight:bold;
 }
 
+.textoYbotones span{
+  font-weight:bold;
+
+}
+
 .imgBootcamp {
   display: flex;
   flex-direction: row;
